k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-core-service
spec:
  selector:
    app: erp-core
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
